--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--Here is the Header with tabs-->
     <div class="header">
-        <h1>Horiseon</h1>
+        <h1>Horiseon Marketing Company</h1>
         <div>
             <ul>
                 <li>
