--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Marketing Company</title>
 </head>
 
 <body>
     <!--Here is the Header with tabs-->
     <div class="header">
-        <h1>Horiseon Marketing Company</h1>
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
